navigation list align fix

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ ul {
     margin-bottom: 5px;
 }
 .nav-second-section li {
-    padding: 12px 60px;
+    padding: 12px 35px;
     text-transform: capitalize;
     font-size: 14px;
 }
@@ -119,7 +119,7 @@ ul {
 }
 .nav-third-section li {
     text-transform: capitalize;
-    padding: 10px 60px;
+    padding: 10px 35px;
     font-size: 14px;
 }
 .nav-third-section li:hover {
@@ -153,7 +153,7 @@ ul {
     text-transform: capitalize;
 }
 .nav-fourth-section li {
-    padding: 25px 30px 30px 70px;
+    padding: 25px 30px 30px 50px;
     font-size: 14px;
 }
 .nav-fourth-section {
